[gd_scene load_steps=2 format=3 uid="uid://c50kt4mx4dybm"]

[ext_resource type="Script" path="res://Script/readyScreen.gd" id="1_y8f7h"]

[node name="ReadyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8f7h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = -264.0
offset_right = 480.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2

[node name="MatchIDContainer" type="Control" parent="Panel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MatchID" type="Label" parent="Panel/MatchIDContainer"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Match ID :"

[node name="MatchIDText" type="LineEdit" parent="Panel/MatchIDContainer"]
layout_mode = 0
offset_left = 160.0
offset_top = 5.0
offset_right = 923.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 30

[node name="ReadyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.5
offset_top = -50.0
offset_right = 114.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Ready"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="button_down" from="Panel/QuitButton" to="." method="_on_quit_button_button_down"]
